# ParticleLevelDarkJet

./: Decay.hpp  ExcitedQuarkDecay.cpp  GetEnvVars.hpp  JetContents.cpp  LICENSE  ParticleName.hpp  PlotParticle.hpp  README.md
DarkJetStudies/: readme.md  setup
DarkJetStudies/dark-jet-studies/: CMakeLists.txt
DarkJetStudies/dark-jet-studies/Root/: DarkJetStudy.cpp
DarkJetStudies/dark-jet-studies/dark-jet-studies/: DarkJetStudy.h  Darkness.hpp  ParticleSort.hpp  selection.xml
DarkJetStudies/source/: CMakeLists.txt
DarkJetStudies/source/dark-jet-studies/: CMakeLists.txt
DarkJetStudies/source/dark-jet-studies/Root/: DarkJetStudy.cpp
DarkJetStudies/source/dark-jet-studies/dark-jet-studies/: DarkJetStudy.h  Darkness.hpp  EventShapeObservables.hpp  Jet.hpp  ParticleName.hh  ParticleName.hpp  ParticleUtils.hp  ParticleUtils.hpp  dark-jet-studies-dict.h  selection.xml
DarkJetStudies/source/dark-jet-studies/util/: runDarkJetStudy.cpp
Example models/: darkjets_modelA.cmnd  darkjets_modelB.cmnd  darkjets_modelC.cmnd  darkjets_modelD.cmnd  darkjets_modelE.cmnd  svj-l.cmnd  svj-s.cmnd
ExcitedQuarks/: JetContents.cpp  JetEfficiency.cpp
Headers/: Darkness.hpp  Decay.hpp  GetEnvVars.hpp  Legend.hpp  ParticleName.hpp  ParticleSort.hpp  readme.md
Rivet/: CompileAndRun.sh  ExcitedQuarkDecay.cpp  JetContents.cpp  Lifetime.cpp  PartonTruthEfficiency.cpp  PlotParticle.hpp  readme.md  setup
Root/: CompileWithRoot.sh  Legend.hpp  ModelCompare.cpp  RecoTruthEfficiency.cpp
Scripts/: ExcitedQuarkDecay.cpp  JetContents.cpp  JetEfficiency.cpp  Lifetime.cpp  root2pdf.cpp
(+1 files in other folders)
